--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -5,8 +5,8 @@
   padding-bottom: 29px;
   margin-top: -30px;
   background-color: $dark-blue;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 30px;
+  border-bottom-right-radius: 30px;
 
   @media (min-width: $medium-width) {
     margin-top: -55px;
@@ -31,6 +31,8 @@
 
 .feedback__authorize{
   @include text(16px, 300, 22px);
+  max-width: 185px;
+  margin-left: 43px;
   margin-top: 19px;
 
   @media (min-width: $medium-width) {
@@ -43,7 +45,7 @@
 .feedback__list{
   display: flex;
   flex-direction: column;
-  margin-top: 17px;
+  margin-top: 19px;
 
   @media (min-width: $medium-width) {
     margin-top: 40px;
@@ -58,8 +60,10 @@
 }
 
 .feedback__header{
-  margin-left: 30px;
-  margin-right: 30px;
+  width: 100%;
+  margin-top: -2px;
+  // margin-left: 30px;
+  // margin-right: 30px;
   text-align: center;
 
   @media (min-width: $medium-width) {
@@ -89,18 +93,34 @@
 .feedback__registration{
   position: relative;
   text-align: center;
-  margin-top: 29px;
+  margin-top: 30px;
 
   @media (min-width: $medium-width) {
     margin-top: 65px;
   }
 }
 
+.feedback__any-questions{
+  @include text(16px, 300, 22px, #FFFFFF);
+  letter-spacing: 0.01em;
+  text-align: center;
+  margin-top: 27px;
+
+  @media (min-width: $medium-width) {
+    margin-top: 60px;
+    font-size: 28px;
+    line-height: 30px;
+    margin-left: 41px;
+  }
+}
+
 .feedback__email{
-  height: 62px;
-  width: 71%;
-  padding-right: 65px;
-  border-radius: 20px;
+  height: 59px;
+  margin-left: -3px;
+  width: 75%;
+  padding-top: 0;
+  padding-right: 63px;
+  border-radius: 10px;
   @include text(18px, bold, 18px, $special-grey);
 
   @media (min-width: $medium-width) {
@@ -137,26 +157,14 @@
   }
 }
 
-.feedback__any-questions{
-  @include text(16px, 300, 22px, #FFFFFF);
-  letter-spacing: 0.01em;
-  text-align: center;
-  margin-top: 29px;
-
-  @media (min-width: $medium-width) {
-    margin-top: 60px;
-    font-size: 28px;
-    line-height: 30px;
-    margin-left: 41px;
-  }
-}
-
 .feedback__send-email{
-  display: inline-block;
-  border-radius: 20px;
+  position: absolute;
+  top: 2px;
+  right: 0;
+  border-radius: 10px;
   margin-left: -65px;
   width: 60px;
-  height: 65px;
+  height: 62px;
 
   @media (min-width: $medium-width) {
     margin-left: -84px;
@@ -167,6 +175,8 @@
 }
 
 .feedback__details{
+  line-height: 22px;
+
   @media (min-width: $medium-width) {
     font-size: 28px;
     line-height: 28px;
@@ -186,8 +196,8 @@
 }
 
 .feedback__icon{
-  width: 16px;
-  height: 15px;
+  width: 21px;
+  height: 21px;
 
   @media (min-width: $medium-width) {
     width: 23px;
@@ -199,4 +209,8 @@
     height: 30px;
     padding: 30px;
   }
+}
+
+.feedback__phone{
+  margin-top: -1px;
 }
