--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -14,6 +14,7 @@
 
 .main-menu--opened{
   display: flex;
+  height: 568px;
 
   @media (min-width: $large-width) {
     display: none;
@@ -31,7 +32,7 @@
 .main-menu__nav{
   display: flex;
   justify-content: center;
-  margin-top: 75px;
+  margin-top: 115px;
 
   @media (min-width: $medium-width) {
     margin-top: 98px;
