--- a/source/sass/blocks/middle-menu.scss
+++ b/source/sass/blocks/middle-menu.scss
@@ -21,6 +21,7 @@
 .middle-menu__container{
   display: flex;
   justify-content: center;
+  margin-top: 9px;
 
   @media (min-width: $large-width) {
     display: flex;
@@ -40,7 +41,7 @@
   align-items: center;
   justify-content: center;
   align-items: center;
-  margin-top: 7px;
+  margin-top: -4px;
 }
 
 .middle-menu__actions--visible{
@@ -56,7 +57,11 @@
   }
 }
 .middle-menu__authorization{
-  font-size: 20px;
+  font-size: 17px;
   line-height: 20px;
   border-radius: 25px;
+
+  @media (min-width: $medium-width) {
+    font-size: 20px;
+  }
 }
