--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -4,11 +4,11 @@
   width: 100%;
   text-align: center;
   background-color: #ffffff;
-  padding-top: 35px;
+  padding-top: 37px;
   padding-bottom: 25px;
-  margin-top: -100px;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  margin-top: -141px;
+  border-top-left-radius: 30px;
+  border-top-right-radius: 30px;
   @media (min-width: $medium-width) {
     padding: 50px 0px;
     margin-top: -55px;
@@ -35,7 +35,6 @@
 }
 
 .page-footer__developed-caption{
-  margin-right: 23px;
   line-height: 16px;
   color: $special-grey;
 
@@ -53,7 +52,7 @@
 .page-footer__socials{
   text-align: center;
   padding: 0;
-  margin-top: 41px;
+  margin-top: 37px;
 
   @media (min-width: $medium-width) {
     margin-top: 0;
@@ -104,4 +103,5 @@
   width: 100%;
   display: flex;
   justify-content: space-between;
+  align-items: center;
 }
