--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -2,12 +2,12 @@
 .users{
   margin-top: -20px;
   padding-top: 88px;
-  padding-bottom: 25px;
+  padding-bottom: 31px;
   position: relative;
   z-index: 7;
   background-color: $dark-blue;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-bottom-left-radius: 30px;
+    border-bottom-right-radius: 30px;
 
   @media (min-width: $medium-width) {
     padding-top: 141px;
@@ -52,8 +52,10 @@
 
 .users__description{
   position: relative;
+  font-weight: 300;
   z-index: 1;
   min-height: 88px;
+  max-width: 220px;
   margin-left: 24px;
   margin-top: 19px;
 
@@ -72,8 +74,7 @@
 }
 
 .users__cards{
-  margin-top: 54px;
-  margin-bottom: 25px;
+  margin-top: 55px;
   display: flex;
   flex-direction: column;
   @media (min-width: $medium-width) {
@@ -246,7 +247,7 @@
   margin-inline-start: 0;
   margin-inline-end: 0;
   margin-bottom: 10px;
-  border-radius: 22px;
+  border-radius: 10px;
 
   @media (min-width: $medium-width) {
     width: 100%;
@@ -277,6 +278,7 @@
   margin-block-end: 0;
   margin-inline-start: 0;
   margin-inline-end: 0;
+  margin-top: 6px;
 }
 
 .users__info{
@@ -451,8 +453,7 @@
   list-style-type: none;
   display: flex;
   justify-content: center;
-  margin-top: -15px;
-  margin-bottom: 13px;
+  margin-top: -14px;
 
   @media (min-width: $medium-width) {
     margin-bottom: 19px;
@@ -460,9 +461,14 @@
 }
 
 .users__flag{
+  &:not(:last-child){
+    margin-right: 20px;
+  }
+}
+
+.users__flag-icon{
   width: 35px;
   height: 25px;
-  margin-right: 10px;
 }
 
 .users__flag-tooltip-1{
@@ -573,8 +579,8 @@
 .users__can-find{
   position: relative;
   z-index: 1;
-  @include text(16px, bold, 22px);
-  margin-top: 25px;
+  @include text(16px, bold, 22px, #ffffff);
+  margin-top: 20px;
   margin-left: 24px;
 
   @media (min-width: $medium-width) {
@@ -592,7 +598,7 @@
 
 .users__list{
   margin-top: 15px;
-  margin-left: 46px;
+  margin-left: 40px;
   margin-right: 36px;
 
   @media (min-width: $medium-width) {
@@ -614,6 +620,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-left: -15px;
 
   &:hover{
     color: $basic-blue-light;
@@ -631,7 +638,7 @@
 }
 
 .users__hashtag{
-  margin-right: 3px;
+  margin-right: 5px;
 }
 
 .users__all{
@@ -640,6 +647,7 @@
   border-radius: 10px;
   display: flex;
   justify-content: space-between;
+  margin-top: 11px;
 
   @media (min-width: $medium-width) {
     width: auto;
@@ -652,5 +660,11 @@
     top: 537px;
     left: 90px;
     width: 275px;
+  }
+}
+
+.users__icon{
+  &:not(:last-child){
+    margin-right: 15px;
   }
 }
