--- a/source/sass/blocks/contacts.scss
+++ b/source/sass/blocks/contacts.scss
@@ -62,6 +62,7 @@
   @media (min-width: $medium-width) {
     font-size: 28px;
     line-height: 28px;
+    margin-left: 25px;
   }
 }
 
@@ -165,6 +166,8 @@
     margin-left: 35px;
     margin-right: 35px;
     width: auto;
+    height: 80px;
+    border-radius: 20px;
   }
 
   @media (min-width: $large-width) {
@@ -190,10 +193,18 @@
 
 .contacts__way-text{
   margin-left: 19px;
+
+  @media (min-width: $medium-width) {
+    margin-left: 35px;
+  }
 }
 
 .contacts__button{
   width: 24px;
   height: 13px;
   margin-right: 15px;
+
+  @media (min-width: $medium-width) {
+    margin-right: 28px;
+  }
 }
