--- a/source/sass/blocks/countries.scss
+++ b/source/sass/blocks/countries.scss
@@ -15,7 +15,7 @@
     background-image: url(../img/flags-background-medium.webp);
     background-repeat: no-repeat;
     background-size: auto;
-    background-position: top 80px right 40px;
+    background-position: top 135px right 40px;
   }
 
   @media (min-width: $large-width) {
@@ -36,7 +36,7 @@
   padding-top: 101px;
 
   @media (min-width:$medium-width) {
-    padding-top: 128px;
+    padding-top: 125px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -53,7 +53,7 @@
   max-width: 380px;
 
   @media (min-width: $medium-width) {
-    margin-left: 35px;
+    margin-left: 0;
   }
 
   @media (min-width: $large-width) {
@@ -70,17 +70,15 @@
 
 .countries__list{
   margin-top: 60px;
-  margin-bottom: 15px;
   display: flex;
   flex-direction: column;
   flex-direction: column;
 
   @media (min-width: $medium-width) {
     align-items: center;
-    margin-bottom: 46px;
-    margin-top: 64px;
+    margin-top: 70px;
     margin-left: -35px;
-    padding-top: 38px;
+    padding-top: 51px;
     padding-left: 35px;
     background-image: url(../img/background-light-medium.webp);
     background-repeat: no-repeat;
@@ -109,11 +107,14 @@
   width: 100%;
   height: 61px;
   border-radius: 10px;
+  margin-top: 15px;
   display: flex;
   justify-content: space-between;
 
   @media (min-width: $medium-width) {
+    margin-top: 20px;
     width: 618px;
+    height: 82px;
   }
 
   @media (min-width: $large-width) {
@@ -134,6 +135,7 @@
 
   @media (min-width: $medium-width) {
     margin-top: 57px;
+    max-width: 345px;
     font-size: 28px;
     line-height: 33px;
   }
@@ -175,6 +177,7 @@
 
   @media (min-width: $medium-width) {
     position: absolute;
+    z-index: 2;
     height: 47px;
     width: 70px;
     left: 375px;
@@ -211,7 +214,7 @@
   @media (min-width: $medium-width) {
     flex-direction: column;
     align-items: flex-start;
-    margin-top: 30px;
+    margin-top: 28px;
   }
 }
 
@@ -228,17 +231,26 @@
   margin-right: 25px;
 
   @media (min-width: $medium-width) {
-    margin-top: 20px;
+    margin-top: 11px;
     margin-right: 0;
     margin-left: 25px;
   }
 }
+
+.countries__visists-count--small-margin{
+  @media (min-width: $medium-width) and (max-width: $medium-max-width) {
+    margin-top: -5px;
+  }
+}
+
 
 .countries__photo{
   width: 100%;
 
   @media (min-width: $medium-width) {
     position: absolute;
+    z-index: 1;
+    top: -14px;
     right: 0;
     height: 140px;
     width: 550px;
@@ -258,10 +270,10 @@
 
   @media (min-width: $medium-width) {
     padding-bottom: 0;
-    margin-bottom: 10px;
+    margin-bottom: 25px;
     min-width: 616px;
     max-width: 730px;
-    max-height: 140px;
+    max-height: 126px;
   }
 
   @media (min-width: $large-width) {
@@ -287,9 +299,21 @@
 
 .countries__user-icon{
   opacity: 0.1;
+  width: 14px;
+  height: 14px;
+
+  @media (min-width: $medium-width) {
+    width: 24px;
+    height: 24px;
+  }
 }
 
 .countries__count{
-  @include text(16px, 500, 18px, $special-grey);
+  @include text(16px, 500, 18px, $basic-blue);
   opacity: 0.3;
+
+  @media (min-width: $medium-width) {
+    font-size: 20px;
+    line-height: 20px;
+  }
 }
