--- a/source/sass/blocks/feedback.scss
+++ b/source/sass/blocks/feedback.scss
@@ -9,8 +9,8 @@
   border-bottom-right-radius: 30px;
 
   @media (min-width: $medium-width) {
-    margin-top: -55px;
-    padding-top: 131px;
+    margin-top: -57px;
+    padding-top: 129px;
     padding-bottom: 60px;
     border-bottom-left-radius: 60px;
     border-bottom-right-radius: 60px;
@@ -36,7 +36,9 @@
   margin-top: 19px;
 
   @media (min-width: $medium-width) {
-    margin-top: 59px;
+    max-width: none;
+    margin-top: 60px;
+    margin-left: 30px;
     font-size: 28px;
     line-height: 32px;
   }
@@ -48,7 +50,7 @@
   margin-top: 19px;
 
   @media (min-width: $medium-width) {
-    margin-top: 40px;
+    margin-top: 45px;
     margin-left: 35px;
   }
 
@@ -62,18 +64,15 @@
 .feedback__header{
   width: 100%;
   margin-top: -2px;
-  // margin-left: 30px;
-  // margin-right: 30px;
   text-align: center;
 
   @media (min-width: $medium-width) {
-    margin-left: 35px;
     margin-right: 35px;
   }
 
   @media (min-width: $large-width) {
-    margin-left: 343px;
-    margin-right: 322px;
+    // margin-left: 343px;
+    // margin-right: 322px;
   }
 }
 
@@ -107,10 +106,9 @@
   margin-top: 27px;
 
   @media (min-width: $medium-width) {
-    margin-top: 60px;
+    margin-top: 56px;
     font-size: 28px;
     line-height: 30px;
-    margin-left: 41px;
   }
 }
 
@@ -125,6 +123,8 @@
 
   @media (min-width: $medium-width) {
     height: 80px;
+    width: 80%;
+    border-radius: 25px;
   }
 
   &::placeholder{
@@ -167,10 +167,14 @@
   height: 62px;
 
   @media (min-width: $medium-width) {
+    top: 3px;
+    right: 35px;
     margin-left: -84px;
     width: 80px;
-    height: 83px;
-    padding-top: 4px;
+    height: 80px;
+    border-radius: 4px;
+    border-top-right-radius: 25px;
+    border-bottom-right-radius: 25px;
   }
 }
 
