--- a/source/sass/blocks/information-list.scss
+++ b/source/sass/blocks/information-list.scss
@@ -50,6 +50,7 @@ background-color: $basic-yellow;
   @media (min-width: $medium-width) {
     font-size: 24px;
     line-height: 24px;
+    margin-top: -2px;
   }
 }
 
@@ -57,6 +58,8 @@ background-color: $basic-yellow;
   @include text(16px, 300, 16px, $special-grey);
 
   @media (min-width: $medium-width) {
+    text-align: right;
+    margin-top: 1px;
     font-size: 28px;
     line-height: 28px;
     min-width: 135px;
