--- a/source/sass/blocks/main-menu.scss
+++ b/source/sass/blocks/main-menu.scss
@@ -16,6 +16,10 @@
   display: flex;
   height: 568px;
 
+  @media (min-width: $medium-width) {
+    height: 910px;
+  }
+
   @media (min-width: $large-width) {
     display: none;
   }
@@ -35,7 +39,7 @@
   margin-top: 115px;
 
   @media (min-width: $medium-width) {
-    margin-top: 98px;
+    margin-top: 83px;
     justify-content: flex-start;
   }
 }
