--- a/source/sass/blocks/promo.scss
+++ b/source/sass/blocks/promo.scss
@@ -6,9 +6,10 @@
     background-position: 0 4px,0 -92px;
 
   @media (min-width: $medium-width) {
+    margin-top: 216px;
     background-image: url(../img/globe-back-tablet.webp);
-    background-position: 0px 267px;
-    background-size: 100% 505px;
+    background-position: 0 229px;
+    background-size: 100% 610px;
   }
 
   @media (min-width: $large-width) {
@@ -54,7 +55,7 @@
     }
 
     & ul li:nth-of-type(2){
-      border-top-right-radius: 25px;
+      border-top-right-radius: 15px;
     }
 
     & ul li:nth-of-type(3){
@@ -62,7 +63,7 @@
     }
 
     & ul li:last-child{
-      border-bottom-right-radius: 25px;
+      border-bottom-right-radius: 15px;
     }
   }
 
@@ -136,6 +137,7 @@
   max-width: 170px;
 
   @media (min-width: $medium-width) {
+    margin-top: 44px;
     max-width: 251px;
     @include text(21px, bold, 25px, #ffffff);
   }
@@ -143,7 +145,7 @@
 
 .promo__indent{
   @media (min-width: $medium-width) {
-    margin-top: 0;
+    margin-top: 32px;
   }
 
   @media (min-width: $large-width) {
@@ -154,14 +156,14 @@
 
 .promo__traveller-icon{
   margin-top: 9px;
-  margin-left: 30px;
+  margin-left: 55px;
   width: 192px;
   height: 255px;
 
   @media (min-width: $medium-width) {
-    margin-left: 0;
-    margin-top: 32px;
-    margin-bottom: -33px;
+    margin-top: 36px;
+    margin-bottom: -36px;
+    margin-left: 174px;
     width: 372px;
     height: 451px;
   }
@@ -195,7 +197,8 @@
   justify-content: center;
 
   @media (min-width: $medium-width) {
-    margin-top: -95px;
+    margin-top: -550px;
+    margin-left: -360px;
   }
 
   @media (min-width: $large-width) {
