--- a/source/sass/blocks/social-list.scss
+++ b/source/sass/blocks/social-list.scss
@@ -11,6 +11,10 @@
 
 .social-list__item{
   margin-right: 27px;
+
+  @media (min-width: $medium-width) {
+    margin-right: 35px;
+  }
 }
 
 .social-list__facebook{
