--- a/source/sass/blocks/countries.scss
+++ b/source/sass/blocks/countries.scss
@@ -19,8 +19,10 @@
   }
 
   @media (min-width: $large-width) {
+    margin-top: -71px;
+    padding-bottom: 123px;
     background-image: url(../img/flags-background-large.webp);
-    background-position: top 88px right 60px;
+    background-position: top 160px right 60px;
   }
 
   @media (min-resolution: 2dppx) and (min-width: $medium-width) {
@@ -57,6 +59,7 @@
   }
 
   @media (min-width: $large-width) {
+    margin-top: -13px;
     margin-left: 170px;
   }
 }
@@ -88,9 +91,9 @@
 
   @media (min-width: $large-width) {
     background-image: url(../img/background-light-large.webp);
-    margin-top: -71px;
-    margin-left: -70px;
-    padding-top: 71px;
+    margin-top: -85px;
+    margin-left: -170px;
+    padding-top: 85px;
     padding-left: 70px;
   }
 
@@ -119,8 +122,8 @@
 
   @media (min-width: $large-width) {
     position: absolute;
-    top: 532px;
-    left: 62%;
+    top: 582px;
+    left: 60%;
     width: 275px;
   }
 }
@@ -185,7 +188,7 @@
   }
 
   @media (min-width: $large-width) {
-    left: 318px;
+    left: 310px;
     top: 37px;
   }
 }
@@ -216,6 +219,10 @@
     align-items: flex-start;
     margin-top: 28px;
   }
+
+  @media (min-width: $large-width) {
+    margin-top: 22px;
+  }
 }
 
 .countries__caption{
@@ -234,6 +241,10 @@
     margin-top: 11px;
     margin-right: 0;
     margin-left: 25px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-top: 15px;
   }
 }
 
