--- a/source/sass/blocks/middle-menu.scss
+++ b/source/sass/blocks/middle-menu.scss
@@ -8,15 +8,23 @@
 
   @media (min-width: $large-width) {
     background-color: #ffffff;
-    margin-bottom: 0;
-    margin-top: 0;
-    margin-left: 0;
+    height: 90px;
+    margin-top: -14px;
     margin-right: 0;
+    margin-bottom: 0;
+    margin-left: 0;
     padding-left: 25px;
     padding-right: 25px;
   }
 }
 
+.middle-menu__logo-mobile-dark--visible{
+  display: none;
+
+  @media (min-width: $large-width) {
+    display: block;
+  }
+}
 
 .middle-menu__container{
   display: flex;
@@ -26,7 +34,9 @@
   @media (min-width: $large-width) {
     display: flex;
     align-items: center;
-    justify-content: space-between;
+    justify-content: flex-start;
+    padding-left: 35px;
+    padding-right: 35px;
   }
 }
 
@@ -42,6 +52,11 @@
   justify-content: center;
   align-items: center;
   margin-top: -4px;
+
+  @media (min-width: $large-width) {
+    padding-right: 0;
+    margin-left: 294px;
+  }
 }
 
 .middle-menu__actions--visible{
@@ -63,5 +78,19 @@
 
   @media (min-width: $medium-width) {
     font-size: 20px;
+  }
+}
+
+.middle-menu__line{
+  @media (min-width: $large-width) {
+    width: 44px;
+    margin-left: 58px;
+  }
+}
+
+.middle-menu__nav{
+  @media (min-width: $large-width) {
+    margin-right: 0;
+    margin-left: 45px;
   }
 }
