--- a/source/sass/blocks/page-footer.scss
+++ b/source/sass/blocks/page-footer.scss
@@ -6,14 +6,18 @@
   background-color: #ffffff;
   padding-top: 37px;
   padding-bottom: 25px;
-  margin-top: -141px;
+  margin-top: -301px;
   border-top-left-radius: 30px;
   border-top-right-radius: 30px;
   @media (min-width: $medium-width) {
     padding: 50px 0px;
-    margin-top: -63px;
+    margin-top: -65px;
     border-top-left-radius: 60px;
     border-top-right-radius: 60px;
+  }
+
+  @media (min-width: $large-width) {
+    margin-top: -132px;
   }
 }
 
@@ -31,6 +35,7 @@
 
   @media (min-width: $medium-width) {
     height: 34px;
+    margin-top: -8px;
   }
 }
 
@@ -41,7 +46,7 @@
   @media (min-width: $medium-width) {
     font-size: 20px;
     line-height: 20px;
-    margin-top: -10px;
+    margin-top: -17px;
     margin-right: 19px;
   }
 
@@ -65,6 +70,10 @@
     margin-top: -4px;
     margin-left: -3px;
   }
+
+  @media (min-width: $large-width) {
+    margin-left: -40px;
+  }
 }
 
 .page-footer__social-item{
@@ -84,10 +93,14 @@
 
   @media (min-width: $medium-width) {
    margin-top: 0;
-   padding-top: 0;;
+   padding-top: 0;
    border: none;
    align-items: center;
   }
+
+  @media (min-width: $medium-width) {
+    margin-top: 7px;
+   }
 }
 
 .page-fotter__icon{
