--- a/source/sass/blocks/users.scss
+++ b/source/sass/blocks/users.scss
@@ -17,7 +17,8 @@
   }
 
   @media (min-width: $large-width) {
-    padding-top: 130px;
+    padding-top: 145px;
+    padding-bottom: 125px;
   }
 }
 
@@ -69,6 +70,7 @@
   }
 
   @media (min-width: $large-width) {
+    max-width: 455px;
     margin-left: 69px;
   }
 }
@@ -85,7 +87,9 @@
   }
 
   @media (min-width: $large-width) {
-    margin-left: 193px;
+    margin-top: 9px;
+    margin-right: 0;
+    margin-left: 0;
   }
 }
 
@@ -263,7 +267,7 @@
   }
 
   @media (min-width: $large-width) {
-    max-width: 285px;
+    width: 285px;
     &:not(:last-child){
       margin-right: 60px;
     }
@@ -602,7 +606,7 @@
   }
 
   @media (min-width: $large-width) {
-    margin-top: 42px;
+    margin-top: 38px;
     margin-left: 69px;
   }
 }
@@ -685,9 +689,9 @@
 
   @media (min-width: $large-width) {
     position: absolute;
-    top: 537px;
-    left: 90px;
-    width: 275px;
+    top: 485px;
+    left: 97px;
+    width: 280px;
   }
 }
 
@@ -698,5 +702,9 @@
 }
 
 .users__button-arrow{
-  margin-right: 38px;
+  margin-right: 24px;
+
+  @media (min-width: $medium-width) {
+    margin-right: 38px;
+  }
 }
